istio/gateway.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: bookinfo-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - bookinfo.example
    port:
      name: http
      number: 80
      protocol: HTTP
  - hosts:
    - bookinfo.example
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      credentialName: bookinfo-credential
      mode: SIMPLE
