istio/envoyfilter.yml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: defender-tweaks
  namespace: istio-ingress
spec:
  workloadSelector:
    labels:
      istio: ingressgateway
  configPatches:
  - applyTo: HTTP_ROUTE
    match:
      context: GATEWAY
    patch:
      operation: INSERT_FIRST
      value:
        name: defender-route
        match:
          prefix: "/"
          headers:
            - name: cq-select
              invert_match: true
        route:
          cluster: outbound|8080||localhost.default.svc.cluster.local
