istio/serviceentry.yml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: localhost
  namespace : default
spec:
  hosts:
  - localhost.default.svc.cluster.local
  location: MESH_INTERNAL
  ports:
  - number: 8080
    name: http
    protocol: HTTP
  resolution: STATIC
  endpoints:
  - address: 127.0.0.1
