istio/virtualservice.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: bookinfo
  namespace: default
spec:
  gateways:
  - bookinfo-gateway
  hosts:
  - '*'
  http:
  - match:
    - headers:
        cq-select:
          exact: CQ-Select-value
      uri:
        exact: /productpage
    - headers:
        cq-select:
          exact: CQ-Select-value
      uri:
        prefix: /static
    - headers:
        cq-select:
          exact: CQ-Select-value
      uri:
        exact: /login
    - headers:
        cq-select:
          exact: CQ-Select-value
      uri:
        exact: /logout
    - headers:
        cq-select:
          exact: CQ-Select-value
      uri:
        prefix: /api/v1/products
    route:
    - destination:
        host: productpage
        port:
          number: 9080
  - route:
    - destination:
        host: localhost
        port:
          number: 8080
